---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 2025-02-20
  Bugfixes:
    - Fixed some missing locale
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 2025-02-20
  Features:
    - Compatible with Factorio Space age
---------------------------------------------------------------------------------------------------
Version: 0.2.5
Date: 2024-10-20
  Features:
    - Added new infinite technologies
  Bugfixes:
    - Fixed scaling of technology costs
---------------------------------------------------------------------------------------------------
Version: 0.2.4
Date: 2024-10-18
  Bugfixes:
    - Updated some icons with isometric perspective
---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 2024-10-16
  Features:
    - New recipes enriching crushed ores
  Bugfixes:
    - Changed order and subgroups of some items
    - Reduced size of mod by removing some hr graphics
    - Fixed module icons on alt view for krastorio crusher and lumber mill
    - Fixed subgroup of alien fluid recipes
    - Fixed fluid inputs for filtration plant
    - Fixed locale of bleach and epoxy
---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 2024-10-16
  Bugfixes:
    - Wooden board (sawing crafting category) can now be handcrafted
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 2024-10-16
  Features:
    - New recipes for military items
  Bugfixes:
    - Fixed military tech tree for Krastorio2 "more realistic guns" setting is enabled
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 2024-10-15
  Notes: