@@ -22,5 +22,7 @@ end
 
 -- Overwrite technology change by Everything on nauvis
 table.insert(data.raw.technology["agriculture"].prerequisites, "sp-automation-science-pack-2")
+
 data.raw.technology["heating-tower"].prerequisites = {"lithium-processing"}
+
 data.raw.technology["lithium-processing"].prerequisites = {"metallurgic-science-pack", "sp-alkaline-solutions"}
