@@ -163,6 +163,11 @@ sp-vanadium-bearing-solution=Vanadium bearing solution
 sp-vinyl-chloride=Vinyl chloride
 sp-xenon=Xenon
 
+[item-group-name]
+sp-materials=Materials
+sp-resources=Resources
+sp-science-products=Science products
+
 [item-name]
 sp-acrocrystal=Acrocrystal
 sp-acromatter=Acromatter
@@ -393,7 +398,12 @@ sp-high-pressure-tank=High pressure tank
 sp-high-purity-silicon=High purity silicon
 sp-holo-grip-controller=Holo grip controller
 sp-hot-stone=Hot stone
+sp-imersite-crystal=Imersite crystal
+sp-imersite-powder=Imersite powder
 sp-imersite-rukite-beam=Imersite rukite beam
+sp-imersium-beam=Imersium beam
+sp-imersium-gear-wheel=Imersium gear wheel
+sp-imersium-plate=Imersium plate
 sp-inconel=Inconel
 sp-induction-hardening-facility=Induction hardening facility
 sp-information-cube=Information cube
@@ -575,6 +585,7 @@ sp-quasicrystal=Quasicrystal
 sp-radiant-glass=Radiant glass
 sp-radiation-channeler=Radiation channeler
 sp-rare-metals-alloy=Rare metals alloy
+sp-raw-imersite=Raw imersite
 sp-raw-rare-metals=Raw rare metals
 sp-reactor-core=Reactor core
 sp-relativity-condenser=Relativity condenser
@@ -846,11 +857,15 @@ sp-crushed-zinc-smelting=Crushed zinc smelting
 sp-crushed-zirconium-smelting=Crushed zirconium smelting
 sp-crushing-aluminum-ore=Crushing aluminum ore
 sp-crushing-chromite=Crushing chromite
+sp-crushing-coal=Crushing coal
 sp-crushing-cobalt-ore=Crushing cobalt ore
+sp-crushing-coke=Crushing coke
+sp-crushing-copper-ore=Crushing copper ore
 sp-crushing-corrupted-acrosphere-1=Crushing corrupted acrosphere 1
 sp-crushing-corrupted-acrosphere-2=Crushing corrupted acrosphere 2
 sp-crushing-corrupted-acrosphere-3=Crushing corrupted acrosphere 3
 sp-crushing-corrupted-acrosphere-4=Crushing corrupted acrosphere 4
+sp-crushing-iron-ore=Crushing iron ore
 sp-crushing-magnesium-ore=Crushing magnesium ore
 sp-crushing-nickel-ore=Crushing nickel ore
 sp-crushing-tinstone=Crushing tinstone
@@ -1000,6 +1015,7 @@ sp-heating-filament=Heating filament
 sp-heatsink=Heatsink
 sp-heavy-ball-bearing=Heavy ball bearing
 sp-heavy-gearbox=Heavy gearbox
+sp-heavy-water=Heavy water
 sp-helium=Helium
 sp-helium-3-from-helium-and-hydrogen=Helium 3 from helium and hydrogen
 sp-helium-from-atmosphere=Helium from atmosphere
@@ -1009,6 +1025,8 @@ sp-high-pressure-tank=High pressure tank
 sp-high-purity-silicon=High purity silicon
 sp-holo-grip-controller=Holo grip controller
 sp-hot-stone=Hot stone
+sp-hydrogen=Hydrogen
+sp-hydrogen-chloride=Hydrogen chloride
 sp-hydrogen-cyanide=Hydrogen cyanide
 sp-hypochlorus-acid=Hypochlorus acid
 sp-imersite-crystal=Imersite crystal
@@ -1044,6 +1062,7 @@ sp-kr-antimatter-reactor=Antimatter reactor
 sp-kr-atmospheric-condenser=Atmospheric condenser
 sp-kr-big-crusher=Big crusher
 sp-kr-bio-lab=Bio lab
+sp-kr-black-reinforced-plate=Black reinforced plate
 sp-kr-electrolysis-plant=Electrolysis plant
 sp-kr-energy-storage=Energy storage
 sp-kr-express-loader=Express loader
@@ -1073,9 +1092,11 @@ sp-kr-superior-splitter=Superior splitter
 sp-kr-superior-transport-belt=Superior transport belt
 sp-kr-superior-underground-belt=Superior underground belt
 sp-kr-turbo-loader=Turbo loader
+sp-kr-water-separation=Water separation
 sp-kr-wind-turbine=Wind turbine
 sp-landfill-from-cement=Landfill from cement
 sp-landfill-from-iron-ore=Landfill from iron ore
+sp-landfill-from-sand=Landfill from sand
 sp-lanthanum-from-acrovoid=Lanthanum from acrovoid
 sp-large-storage-tank=Large storage tank
 sp-laser=Laser
@@ -1085,6 +1106,7 @@ sp-leadstone-from-acrovoid=Leadstone from acrovoid
 sp-lens=Lens
 sp-light-emitting-diode=Light emitting diode
 sp-liquid-nitrogen=Liquid nitrogen
+sp-liquid-sodium=Liquid sodium
 sp-lithium-chloride=Lithium chloride
 sp-lithium-oxide=Lithium oxide
 sp-lithium-sulfur-battery=Lithium sulfur battery
@@ -1144,6 +1166,8 @@ sp-niobium-powder=Niobium powder
 sp-niobium-steel=Niobium steel
 sp-niobium-tin=Niobium tin
 sp-nitenol=Nitenol
+sp-nitric-acid=Nitric acid
+sp-nitrogen=Nitrogen
 sp-nozzle=Nozzle
 sp-nuclear-science-pack-2=Nuclear science pack 2
 sp-nuclear-science-pack-3=Nuclear science pack 3
@@ -1152,6 +1176,7 @@ sp-omni-pulse-generator=Omni pulse generator
 sp-optical-sensor=Optical sensor
 sp-orbital-cell=Orbital cell
 sp-oxidizer=Oxidizer
+sp-oxygen=Oxygen
 sp-palladium=Palladium
 sp-palladium-from-acrovoid=Palladium from acrovoid
 sp-pathogen-lab=Pathogen lab
@@ -1234,6 +1259,7 @@ sp-rukite-powder=Rukite powder
 sp-rukite-rocket=Rukite rocket
 sp-rukite-rocket-silo=Rukite rocket silo
 sp-rukite-to-yemnuth-acrosphere=Rukite to yemnuth acrosphere
+sp-salt=Salt
 sp-sand=Sand
 sp-seal=Seal
 sp-seed-processing=Seed processing
@@ -1264,6 +1290,7 @@ sp-stainless-steel=Stainless steel
 sp-stainless-steel-gear-wheel=Stainless steel gear wheel
 sp-steel-beam=Steel beam
 sp-steel-wheel=Steel wheel
+sp-stone-brick-from-sand=Stone brick from sand
 sp-stone-from-acrocrystal=Stone from acrocrystal
 sp-styrene=Styrene
 sp-subatomic-condenser=Subatomic condenser
@@ -1332,6 +1359,7 @@ sp-vinyl-chloride=Vinyl chloride
 sp-vitality-prism=Vitality prism
 sp-vortex-core=Vortex core
 sp-waspaloy=Waspaloy
+sp-water-from-atmosphere=Water from atmosphere
 sp-wood-chips=Wood chips
 sp-wood-from-urea=Wood from urea
 sp-wood-fuel=Wood fuel
