@@ -16,8 +16,9 @@ LOCALE_FILE_NAME = "mod_locale.cfg"
 LOCALE_ENGLISH_PATH = fr"{LOCALE_PATH}\en\{LOCALE_FILE_NAME}"
 
 AUTOPLACE_CONTROL_PATH = fr"{PROTOTYPES_PATH}\resource\autoplace-control.lua"
-ITEMS_PATH = fr"{PROTOTYPES_PATH}\item.lua"
+ITEM_GROUPS_PATH = fr"{PROTOTYPES_PATH}\item-groups.lua"
 FLUID_PATH = fr"{PROTOTYPES_PATH}\fluid.lua"
+ITEMS_PATH = fr"{PROTOTYPES_PATH}\item.lua"
 RECIPES_PATH = fr"{PROTOTYPES_PATH}\recipe.lua"
 ROCKET_SILO_PATH = fr"{PROTOTYPES_PATH}\rocket-silo.lua"
 TECHNOLOGIES_PATH = fr"{PROTOTYPES_PATH}\technology.lua"
